--- a/site/pages/about/index.html
+++ b/site/pages/about/index.html
@@ -61,6 +61,7 @@
   <!-- Footer partial -->
   <div id="footer"></div>
 
+  <script src="/assets/js/quotes.js" defer></script>
   <script src="/assets/js/loader.js" defer></script>
   <script defer>
     document.addEventListener('DOMContentLoaded', () => {
