--- a/site/pages/press/index.html
+++ b/site/pages/press/index.html
@@ -34,6 +34,7 @@
 
   <div id="footer"></div>
 
+  <script src="/assets/js/quotes.js" defer></script>
   <script src="/assets/js/loader.js" defer></script>
   <script defer>
     document.addEventListener('DOMContentLoaded', () => {
