--- a/site/pages/privacy/index.html
+++ b/site/pages/privacy/index.html
@@ -38,6 +38,7 @@
 
   <div id="footer"></div>
 
+  <script src="/assets/js/quotes.js" defer></script>
   <script src="/assets/js/loader.js" defer></script>
   <script defer>
     document.addEventListener('DOMContentLoaded', () => {
