feat(brand): set hero to “The Butterfly Layer” with H2 “L8 — Engineering elegance at the human layer”; align header/footer; third-person page copy

--- a/site/pages/about/index.html
+++ b/site/pages/about/index.html
@@ -4,29 +4,38 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About — L8 The Butterfly Layer</title>
-
+  <title>About — The Butterfly Layer</title>
+  <meta name="description" content="L8 — The Butterfly Layer. Jennifer Bowman helps global enterprises architect networks of the future at the human layer.">
   <link rel="stylesheet" href="/assets/css/variables.css" />
   <link rel="stylesheet" href="/assets/css/main.css" />
 </head>
 <body id="top">
-  <!-- Header partial -->
   <div id="header"></div>
 
   <main id="main" role="main">
     <header class="page-header container">
       <h1>About</h1>
       <p class="page-intro">
-        Blending architecture, AI, and elegance — building networks with intent and grace.
+        L8 is the human layer above the stack — where intent, clarity, and elegance shape the network.
       </p>
     </header>
 
     <section class="container flow">
+      <h2>Jennifer Bowman</h2>
+      <p>
+        Principal Architect in Cisco CX. Supports global enterprises in envisioning, designing,
+        and realizing secure, AI-driven multi-domain networks — aligning human intent with technical architecture
+        in partnership with client and Cisco teams worldwide.
+      </p>
+      <p>
+        A multidisciplinary background — musician, researcher, teacher, runway model, engineer — informs an
+        architectural practice that composes systems with rigor and grace.
+      </p>
+
       <h2>The Butterfly Layer</h2>
       <p>
-        A design approach that pairs rigorous architecture with aesthetic restraint.
-        Like a butterfly’s wing, the lightest touch can shift what’s possible—clarifying systems,
-        refining stories, and revealing graceful paths through complexity.
+        A light, intentional touch can shift what’s possible. Elegant defaults, modular growth,
+        and human-centered automation reveal calm, scalable paths through complexity.
       </p>
 
       <h2>Principles</h2>
@@ -36,39 +45,18 @@
         <li>Human-centered automation</li>
         <li>Clarity in structure, grace in execution</li>
       </ul>
-
-      <h2>Focus Areas</h2>
-      <div class="grid two">
-        <div>
-          <h3>Architecture & Systems</h3>
-          <p>Information architecture, content models, and processes that scale calmly.</p>
-        </div>
-        <div>
-          <h3>AI & Inference</h3>
-          <p>Tools and workflows that augment discernment—never overwhelm it.</p>
-        </div>
-      </div>
     </section>
 
-    <!-- Optional pull-quote block for the future “Editorial Elegance” style -->
     <aside class="container pull-quote" aria-label="Brand pull quote">
       <blockquote>
-        <p>“Transformation through a light, intentional touch.”</p>
+        <p>“Engineering elegance at the human layer.”</p>
       </blockquote>
     </aside>
   </main>
 
-  <!-- Footer partial -->
   <div id="footer"></div>
 
-  <script src="/assets/js/quotes.js" defer></script>
   <script src="/assets/js/loader.js" defer></script>
-  <script defer>
-    document.addEventListener('DOMContentLoaded', () => {
-      // Absolute paths maintain consistency whether opened locally or hosted
-      loadPartial('#header', '/site/partials/header.html');
-      loadPartial('#footer', '/site/partials/footer.html');
-    });
-  </script>
+  <script src="/assets/js/quotes.js" defer></script>
 </body>
 </html>
