--- a/site/pages/index.html
+++ b/site/pages/index.html
@@ -4,23 +4,20 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>L8 — The Butterfly Layer</title>
-
+  <title>The Butterfly Layer — L8</title>
+  <meta name="description" content="L8 — The Butterfly Layer. The human layer above the stack: where intent, architecture, and elegance shape networks of the future.">
   <link rel="stylesheet" href="/assets/css/variables.css" />
   <link rel="stylesheet" href="/assets/css/main.css" />
 </head>
 <body id="top">
-  <!-- Header partial -->
   <div id="header"></div>
 
   <main id="main" role="main">
     <section class="hero container">
       <h1 class="hero-title">The Butterfly Layer</h1>
-      <p class="hero-tagline">
-        Blending architecture, AI, and elegance — building networks with intent and grace.
-      </p>
+      <p class="hero-tagline"><strong>L8</strong> — Engineering elegance at the human layer.</p>
       <p class="hero-cta">
-        <a class="button" href="/pages/about/">Learn more</a>
+        <a class="button" href="/pages/about/">Explore the vision</a>
       </p>
     </section>
 
@@ -28,34 +25,27 @@
       <h2>Highlights</h2>
       <ul class="card-grid">
         <li class="card">
-          <h3>Work</h3>
-          <p>Selected projects at the intersection of systems and style.</p>
-          <p><a href="/pages/resources/" class="link-arrow">Explore work & resources</a></p>
+          <h3>Resources</h3>
+          <p>Frameworks and patterns for calm, scalable architectures.</p>
+          <p><a href="/pages/resources/" class="link-arrow">Browse resources</a></p>
         </li>
         <li class="card">
-          <h3>Writing</h3>
-          <p>Notes on architecture, inference, and elegant infrastructure.</p>
-          <p><a href="/pages/press/" class="link-arrow">Read essays & press</a></p>
+          <h3>Press</h3>
+          <p>Talks, interviews, and features on Layer&nbsp;8 thinking.</p>
+          <p><a href="/pages/press/" class="link-arrow">See features</a></p>
         </li>
         <li class="card">
           <h3>Podcast</h3>
-          <p>Conversations on building with intention.</p>
+          <p>Conversations where intent meets infrastructure.</p>
           <p><a href="/pages/podcast/" class="link-arrow">Visit podcast</a></p>
         </li>
       </ul>
     </section>
   </main>
 
-  <!-- Footer partial -->
   <div id="footer"></div>
 
-  <script src="/assets/js/quotes.js" defer></script>
   <script src="/assets/js/loader.js" defer></script>
-  <script defer>
-    document.addEventListener('DOMContentLoaded', () => {
-      loadPartial('#header', '/site/partials/header.html');
-      loadPartial('#footer', '/site/partials/footer.html');
-    });
-  </script>
+  <script src="/assets/js/quotes.js" defer></script>
 </body>
 </html>
