--- a/site/pages/contact/index.html
+++ b/site/pages/contact/index.html
@@ -4,53 +4,35 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact — L8 The Butterfly Layer</title>
-
+  <title>Contact — The Butterfly Layer</title>
+  <meta name="description" content="Contact L8 — The Butterfly Layer. Advisory, speaking, and collaborations at the human layer of the network.">
   <link rel="stylesheet" href="/assets/css/variables.css" />
   <link rel="stylesheet" href="/assets/css/main.css" />
 </head>
 <body id="top">
-  <!-- Header partial -->
   <div id="header"></div>
 
   <main id="main" role="main">
     <header class="page-header container">
       <h1>Contact</h1>
-      <p class="page-intro">
-        Get in touch — inquiries, collaborations, conversations, or graceful ideas.
-      </p>
+      <p class="page-intro">Advisory, speaking, and collaborations focused on Layer 8 architecture.</p>
     </header>
 
     <section class="container flow">
       <h2>Email</h2>
-      <p>
-        <a href="mailto:hello@butterflylayer.com">hello@butterflylayer.com</a>
-      </p>
+      <p><a href="mailto:hello@butterflylayer.com">hello@butterflylayer.com</a></p>
 
       <h2>Social</h2>
       <ul>
-        <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
-        <li><a href="https://youtube.com/">YouTube</a></li>
+        <li><a href="https://www.linkedin.com/in/butterflylayer/">LinkedIn</a></li>
+        <li><a href="https://www.youtube.com/" rel="noopener">YouTube</a></li>
       </ul>
     </section>
-
-    <aside class="container pull-quote" aria-label="Contact pull quote">
-      <blockquote>
-        <p>“Connection is a network’s most elegant layer.”</p>
-      </blockquote>
-    </aside>
   </main>
 
-  <!-- Footer partial -->
   <div id="footer"></div>
 
-  <script src="/assets/js/quotes.js" defer></script>
   <script src="/assets/js/loader.js" defer></script>
-  <script defer>
-    document.addEventListener('DOMContentLoaded', () => {
-      loadPartial('#header', '/site/partials/header.html');
-      loadPartial('#footer', '/site/partials/footer.html');
-    });
-  </script>
+  <script src="/assets/js/quotes.js" defer></script>
 </body>
 </html>
