--- a/pages/podcast/index.html
+++ b/pages/podcast/index.html
@@ -32,8 +32,8 @@
   <script src="/assets/js/podcast.js" defer></script>
   <script defer>
     document.addEventListener('DOMContentLoaded', () => {
-      loadPartial('#header', '/site/partials/header.html');
-      loadPartial('#footer', '/site/partials/footer.html');
+      loadPartial('#header', '/partials/header.html');
+      loadPartial('#footer', '/partials/footer.html');
       // podcast.js should populate #episodes from /site/podcast/episodes.json
     });
   </script>
