--- a/pages/index.html
+++ b/pages/index.html
@@ -30,10 +30,10 @@
           <p><a href="/pages/resources/" class="link-arrow">Browse resources</a></p>
         </li>
         <li class="card">
-          <h3>Press</h3>
-          <p>Talks, interviews, and features on Layer&nbsp;8 thinking.</p>
-          <p><a href="/pages/press/" class="link-arrow">See features</a></p>
-        </li>
+<!--           <h3>Press</h3> -->
+<!--           <p>Talks, interviews, and features on Layer&nbsp;8 thinking.</p> -->
+<!--           <p><a href="/pages/press/" class="link-arrow">See features</a></p> -->
+<!--         </li> -->
         <li class="card">
           <h3>Podcast</h3>
           <p>Conversations where intent meets infrastructure.</p>
