Resources page starter content

--- a/pages/resources/index.html
+++ b/pages/resources/index.html
@@ -20,12 +20,18 @@
 
     <section class="container flow">
       <ul class="resource-list">
-        <!-- Example:
         <li>
-          <h3><a href="/pages/resources/architecture-guide/">Architecture Guide</a></h3>
-          <p>Lightweight patterns for calm scalability.</p>
+          <h3><a href="/assets/docs/l8-architecture-guide.pdf">Layer&nbsp;8 Architecture Guide</a></h3>
+          <p>Patterns and principles for building calm, scalable, human‑centered networks.</p>
         </li>
-        -->
+        <li>
+          <h3><a href="https://www.cisco.com/c/en/us/solutions/index.html" target="_blank" rel="noopener">Cisco Solutions Portfolio</a></h3>
+          <p>Reference designs and validated architectures across enterprise and service provider environments.</p>
+        </li>
+        <li>
+          <h3><a href="/assets/docs/l8-toolkit-v1.pdf">L8 Toolkit</a></h3>
+          <p>A curated set of templates, diagrams, and checklists that accelerate design and collaboration at the human layer.</p>
+        </li>
       </ul>
     </section>
   </main>
