Add headshot image to About page

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -22,6 +22,9 @@
 
     <section class="container flow">
       <h2>Jennifer Bowman</h2>
+      <figure class="profile-photo">
+        <img src="/assets/img/headshot-jennifer.jpg" alt="Jennifer Bowman, Principal Architect at Cisco CX" />
+      </figure>
       <p>
         Principal Architect in Cisco CX. Supports global enterprises in envisioning, designing,
         and realizing secure, AI-driven multi-domain networks — aligning human intent with technical architecture
