Add headshot to About page

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -21,19 +21,23 @@
     </header>
 
     <section class="container flow">
-      <h2>Jennifer Bowman</h2>
-      <figure class="profile-photo">
-        <img src="/assets/img/headshot-jennifer.jpg" alt="Jennifer Bowman, Principal Architect at Cisco CX" />
-      </figure>
-      <p>
-        Principal Architect in Cisco CX. Supports global enterprises in envisioning, designing,
-        and realizing secure, AI-driven multi-domain networks — aligning human intent with technical architecture
-        in partnership with client and Cisco teams worldwide.
-      </p>
-      <p>
-        A multidisciplinary background — musician, researcher, teacher, runway model, engineer — informs an
-        architectural practice that composes systems with rigor and grace.
-      </p>
+      <h2>Jennifer Bowman — Principal Architect, Cisco CX</h2>
+      <section class="bio-block">
+        <figure class="profile-photo">
+          <img src="/assets/img/headshot-jennifer.jpg" alt="Jennifer Bowman, Principal Architect at Cisco CX" />
+        </figure>
+        <div class="bio-text">
+          <p>
+            Principal Architect in Cisco CX. Supports global enterprises in envisioning, designing,
+            and realizing secure, AI-driven multi-domain networks — aligning human intent with technical architecture
+            in partnership with client and Cisco teams worldwide.
+          </p>
+          <p>
+            A multidisciplinary background — musician, researcher, teacher, runway model, engineer — informs an
+            architectural practice that composes systems with rigor and grace.
+          </p>
+        </div>
+      </section>
 
       <h2>The Butterfly Layer</h2>
       <p>
