Fix CoCo centering + suppress Press in footer

--- a/pages/coco/index.html
+++ b/pages/coco/index.html
@@ -14,7 +14,7 @@
   <main id="main" role="main">
   <h1>CoCo — Chief Wellness Officer</h1>
   <p class="page-intro">Chocolate lab, teammate, and on-camera regular.</p>
-  <section class="bio-block">
+  <section class="container bio-block">
     <figure class="profile-photo">
       <img src="/assets/img/coco/coco-1.jpg" alt="CoCo the chocolate lab sitting attentively during a video call." />
       <figcaption>On duty during client sessions.</figcaption>
