--- a/pages/index.html
+++ b/pages/index.html
@@ -29,11 +29,12 @@
           <p>Frameworks and patterns for calm, scalable architectures.</p>
           <p><a href="/pages/resources/" class="link-arrow">Browse resources</a></p>
         </li>
-        <li class="card">
-<!--           <h3>Press</h3> -->
-<!--           <p>Talks, interviews, and features on Layer&nbsp;8 thinking.</p> -->
-<!--           <p><a href="/pages/press/" class="link-arrow">See features</a></p> -->
-<!--         </li> -->
+        <li class="card" id="blog-teaser-card">
+          <h3>From the Blog</h3>
+          <div id="blog-teaser">
+            <p>Loading latest post…</p>
+          </div>
+        </li>
         <li class="card">
           <h3>Podcast</h3>
           <p>Conversations where intent meets infrastructure.</p>
@@ -47,5 +48,6 @@
 
   <script src="/assets/js/loader.js" defer></script>
   <script src="/assets/js/quotes.js" defer></script>
+  <script src="/assets/js/blog-teaser.js" defer></script>
 </body>
 </html>
