--- a/pages/index.html
+++ b/pages/index.html
@@ -13,12 +13,31 @@
   <div id="header"></div>
 
   <main id="main" role="main">
-    <section class="hero container">
-      <h1 class="hero-title">The Butterfly Layer</h1>
-      <p class="hero-tagline"><strong>L8</strong> — Engineering elegance at the human layer.</p>
-      <p class="hero-cta">
-        <a class="button" href="/pages/about/">Explore the vision</a>
-      </p>
+    <section class="hero">
+      <div class="hero-inner container">
+        
+        <!-- LEFT: Text -->
+        <div class="hero-copy">
+          <h1 class="hero-title">The Butterfly Layer</h1>
+          <p class="hero-subtitle">
+            <strong>L8</strong> — Engineering elegance at the human layer.
+          </p>
+          <p class="hero-cta">
+            <a class="button" href="/pages/about/">Explore the vision</a>
+          </p>
+        </div>
+
+        <!-- RIGHT: Butterfly Visual -->
+        <div class="hero-visual">
+          <img
+            src="/assets/img/ui/hero-butterfly.svg"
+            alt="Elegant butterfly motif for The Butterfly Layer"
+            class="hero-butterfly"
+            loading="lazy"
+          />
+        </div>
+
+      </div>
     </section>
 
     <section class="highlights container">
