About and CoCo pages improved layout.

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -22,7 +22,7 @@
 
     <section class="container flow">
       <h2>Jennifer Bowman — Principal Architect, Cisco CX</h2>
-      <section class="container bio-block">
+      <section class="bio-block">
         <figure class="profile-photo">
           <img src="/assets/img/headshot-jennifer.jpg" alt="Jennifer Bowman, Principal Architect at Cisco CX" />
         </figure>
