--- a/pages/coco/index.html
+++ b/pages/coco/index.html
@@ -11,34 +11,61 @@
 </head>
 <body id="top">
   <div id="header"></div>
+
   <main id="main" role="main">
-  <h1>CoCo — Chief Wellness Officer</h1>
-  <p class="page-intro">Chocolate lab, teammate, and on-camera regular.</p>
-  <section class="container bio-block">
-    <figure class="profile-photo">
-      <img src="/assets/img/coco/coco-1.jpg" alt="CoCo the chocolate lab sitting attentively during a video call." />
-      <figcaption>On duty during client sessions.</figcaption>
-    </figure>
-    <div class="bio-text">
-      <p>
-        CoCo regularly appears on video, providing calm energy and levity during high-stakes discussions.
-        She is known to improve meeting outcomes, morale, and daily step counts.
-      </p>
-      <figure>
-        <img src="/assets/img/coco/coco-2.jpg" alt="CoCo relaxing between meetings." />
-        <figcaption>Recovery between sprints.</figcaption>
+    <!-- Page header: matches About / other pages -->
+    <section class="page-header">
+      <div class="container">
+        <h1>CoCo — Chief Wellness Officer</h1>
+        <p class="page-intro">
+          Chocolate lab, teammate, and on-camera regular.
+        </p>
+      </div>
+    </section>
+
+    <!-- Primary bio block (image + text) -->
+    <section class="container bio-block">
+      <figure class="profile-photo">
+        <!-- You can swap in a real image later; leaving path as-is for now -->
+        <img
+          src="/assets/img/coco/coco-1.jpg"
+          alt="CoCo the chocolate lab sitting attentively during a video call."
+        />
+        <figcaption>On duty during client sessions.</figcaption>
       </figure>
+
+      <div class="bio-text">
+        <p>
+          CoCo regularly appears on video, providing calm energy and levity during
+          high-stakes discussions. She is known to improve meeting outcomes, morale,
+          and daily step counts.
+        </p>
+
+        <figure>
+          <img
+            src="/assets/img/coco/coco-2.jpg"
+            alt="CoCo relaxing between meetings."
+          />
+          <figcaption>Recovery between sprints.</figcaption>
+        </figure>
+      </div>
+    </section>
+
+    <!-- Secondary section: appearances + quote, in their own container -->
+    <section class="container flow">
       <h2>Appearances</h2>
       <ul>
         <li>Global enterprise strategy workshops (cameo)</li>
         <li>Architecture reviews and long-form design sessions</li>
         <li>Podcast greenroom and test recordings</li>
       </ul>
+
       <aside class="pull-quote" aria-label="CoCo quote">
-        <blockquote><p>“Walks are non-negotiable.”</p></blockquote>
+        <blockquote>
+          <p>“Walks are non-negotiable.”</p>
+        </blockquote>
       </aside>
-    </div>
-  </section>
+    </section>
   </main>
 
   <div id="footer"></div>
