--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -13,52 +13,80 @@
   <div id="header"></div>
 
   <main id="main" role="main">
-    <header class="page-header container">
-      <h1>About</h1>
-      <p class="page-intro">
-        L8 is the human layer above the stack — where intent, clarity, and elegance shape the network.
-      </p>
+    <!-- Page header -->
+    <header class="page-header">
+      <div class="container flow">
+        <p class="kicker">About</p>
+        <h1>About Jennifer Bowman</h1>
+        <p class="page-intro">
+          L8 is the human layer above the stack — where intent, clarity, and elegance
+          shape the network.
+        </p>
+      </div>
     </header>
 
-    <section class="container flow">
-      <h2>Jennifer Bowman — Principal Architect, Cisco CX</h2>
-      <section class="bio-block">
-        <figure class="profile-photo">
-          <img src="/assets/img/headshot-jennifer.jpg" alt="Jennifer Bowman, Principal Architect at Cisco CX" />
-        </figure>
-        <div class="bio-text">
-          <p>
-            Principal Architect in Cisco CX. Supports global enterprises in envisioning, designing,
-            and realizing secure, AI-driven multi-domain networks — aligning human intent with technical architecture
-            in partnership with client and Cisco teams worldwide.
-          </p>
-          <p>
-            A multidisciplinary background — musician, researcher, teacher, runway model, engineer — informs an
-            architectural practice that composes systems with rigor and grace.
-          </p>
+    <!-- Main bio section -->
+    <section class="page-section">
+      <div class="container">
+        <div class="bio-block">
+          <figure class="profile-photo">
+            <img
+              src="/assets/img/headshot-jennifer.jpg"
+              alt="Jennifer Bowman, Principal Architect at Cisco CX"
+            />
+          </figure>
+
+          <div class="bio-text flow">
+            <h2>Principal Architect, Cisco CX</h2>
+            <p>
+              Principal Architect in Cisco CX. Supports global enterprises in envisioning,
+              designing, and realizing secure, AI-driven multi-domain networks — aligning human
+              intent with technical architecture in partnership with client and Cisco teams
+              worldwide.
+            </p>
+            <p>
+              A multidisciplinary background — musician, researcher, teacher, runway model,
+              engineer — informs an architectural practice that composes systems with rigor
+              and grace.
+            </p>
+          </div>
         </div>
-      </section>
-
-      <h2>The Butterfly Layer</h2>
-      <p>
-        A light, intentional touch can shift what’s possible. Elegant defaults, modular growth,
-        and human-centered automation reveal calm, scalable paths through complexity.
-      </p>
-
-      <h2>Principles</h2>
-      <ul class="list-check">
-        <li>Intent over impulse</li>
-        <li>Elegant defaults, modular growth</li>
-        <li>Human-centered automation</li>
-        <li>Clarity in structure, grace in execution</li>
-      </ul>
+      </div>
     </section>
 
-    <aside class="container pull-quote" aria-label="Brand pull quote">
-      <blockquote>
-        <p>“Engineering elegance at the human layer.”</p>
-      </blockquote>
-    </aside>
+    <!-- The Butterfly Layer section -->
+    <section class="page-section">
+      <div class="container flow">
+        <h2>The Butterfly Layer</h2>
+        <p>
+          A light, intentional touch can shift what’s possible. Elegant defaults,
+          modular growth, and human-centered automation reveal calm, scalable paths
+          through complexity.
+        </p>
+      </div>
+    </section>
+
+    <!-- Principles section -->
+    <section class="page-section">
+      <div class="container flow">
+        <h2>Principles</h2>
+        <ul class="list-check">
+          <li>Intent over impulse</li>
+          <li>Elegant defaults, modular growth</li>
+          <li>Human-centered automation</li>
+          <li>Clarity in structure, grace in execution</li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- Pull quote -->
+    <section class="page-section">
+      <aside class="container pull-quote" aria-label="Brand pull quote">
+        <blockquote>
+          <p>“Engineering elegance at the human layer.”</p>
+        </blockquote>
+      </aside>
+    </section>
   </main>
 
   <div id="footer"></div>
