--- a/pages/index.html
+++ b/pages/index.html
@@ -42,8 +42,8 @@
     <section class="page-section">
       <div class="container">
         <header class="page-intro flow">
-          <p class="kicker">What lives at Layer 8</p>
-          <h2>Architecture, AI, and the human layer</h2>
+          <p class="kicker">What Lives at Layer 8</p>
+          <h2>Architecture, AI, and the Human Layer</h2>
           <p>
             L8: The Butterfly Layer is where systems thinking, elegant design,
             and lived experience come together — from global architectures to the
@@ -54,7 +54,7 @@
         <ul class="card-grid" aria-label="Highlights">
           <li>
             <article class="card flow">
-              <h3>Intent-driven architecture</h3>
+              <h3>Intent-Driven Architecture</h3>
               <p>
                 Translating complex enterprise requirements into graceful,
                 resilient designs that respect both the network and the people
@@ -64,7 +64,7 @@
           </li>
           <li>
             <article class="card flow">
-              <h3>AI with a human lens</h3>
+              <h3>AI with a Human Lens</h3>
               <p>
                 Exploring where AI amplifies human judgment — not replaces it —
                 across design, operations, and collaboration.
@@ -73,7 +73,7 @@
           </li>
           <li>
             <article class="card flow">
-              <h3>Elegance in practice</h3>
+              <h3>Elegance in Practice</h3>
               <p>
                 From diagrams and documents to conversations and decisions,
                 pursuing solutions that feel as calm and coherent as they are
@@ -89,8 +89,8 @@
     <section class="page-section">
       <div class="container">
         <header class="page-intro flow">
-          <p class="kicker">From the blog</p>
-          <h2>Recent writing</h2>
+          <p class="kicker">From the Blog</p>
+          <h2>Recent Writing</h2>
           <p>
             Essays and reflections from the Butterfly Layer — architecture stories,
             lessons from the field, and thoughts on the human side of networking.
@@ -99,7 +99,7 @@
 
         <!-- This card is styled and can be populated by your existing JS -->
         <article id="blog-teaser-card" class="card">
-          <p class="teaser-meta">Latest post</p>
+          <p class="teaser-meta">Latest Post</p>
           <h3 class="teaser-title">Loading latest post…</h3>
           <p class="teaser-summary">
             Please wait while we fetch the most recent story from the Butterfly Layer.
@@ -108,7 +108,7 @@
             <span class="tag">L8</span>
             <span class="tag">Architecture</span>
           </p>
-          <a href="/blog/" class="link-arrow">Browse all posts</a>
+          <a href="/blog/" class="link-arrow">Browse all Posts</a>
         </article>
       </div>
     </section>
@@ -118,7 +118,7 @@
       <div class="container two-column">
         <article class="card flow">
           <p class="kicker">Podcast</p>
-          <h2>L8: The Butterfly Layer — in conversation</h2>
+          <h2>L8: The Butterfly Layer — In Conversation</h2>
           <p>
             A podcast exploring architecture, intent, and the human stories that sit
             between the diagrams. Episodes blend technical depth with honest,
@@ -129,15 +129,15 @@
             networks you build — and the people who live inside them — with more
             clarity and care.
           </p>
-          <a href="/podcast/" class="button">Visit the podcast</a>
+          <a href="/podcast/" class="button">Visit the Podcast</a>
         </article>
 
         <aside class="card flow">
-          <h3>What to expect</h3>
+          <h3>What to Expect</h3>
           <ul>
-            <li>Deep dives on real-world architectures and tradeoffs</li>
-            <li>Reflections from global strategy and transformation work</li>
-            <li>Moments from the greenroom, with CoCo occasionally supervising</li>
+            <li>Deep dives on real-world architectures and tradeoffs.</li>
+            <li>Reflections from global strategy and transformation work.</li>
+            <li>Moments from the greenroom, with CoCo occasionally supervising.</li>
           </ul>
         </aside>
       </div>
@@ -146,7 +146,7 @@
     <!-- Back to top / subtle footer helper -->
     <section class="page-section backtotop">
       <div class="container">
-        <a href="#main-content">Back to top</a>
+        <a href="#main-content">Back to Top</a>
       </div>
     </section>
   </main>
