--- a/pages/index.html
+++ b/pages/index.html
@@ -24,7 +24,7 @@
             with as much care as the packets themselves.
           </p>
           <div class="hero-cta">
-            <a href="/about/" class="button">Meet Jennifer</a>
+            <a href="/pages/about/" class="button">Meet Jennifer</a>
           </div>
         </div>
 
