--- a/pages/index.html
+++ b/pages/index.html
@@ -30,7 +30,7 @@
 
         <div class="hero-visual" aria-hidden="true">
           <img
-            src="/assets/images/hero-butterfly.svg"
+            src="/assets/images/hero-butterfly.svg?v=2"
             alt=""
             class="hero-butterfly"
           />
