--- a/pages/terms/index.html
+++ b/pages/terms/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Terms of Use — L8 The Butterfly Layer</title>
 
-  <link rel="stylesheet" href="/assets/css/variables.css" />
-  <link rel="stylesheet" href="/assets/css/main.css" />
+  <link rel="stylesheet" href="/assets/css/variables.css?v=20251121181842" />
+  <link rel="stylesheet" href="/assets/css/main.css?v=20251121181842" />
 </head>
 <body id="top">
   <div id="header"></div>
@@ -32,13 +32,7 @@
 
   <div id="footer"></div>
 
-  <script src="/assets/js/quotes.js" defer></script>
-  <script src="/assets/js/loader.js" defer></script>
-  <script defer>
-    document.addEventListener('DOMContentLoaded', () => {
-      loadPartial('#header', '/site/partials/header.html');
-      loadPartial('#footer', '/site/partials/footer.html');
-    });
-  </script>
+  <script src="/assets/js/quotes.js?v=20251121181842" defer></script>
+  <script src="/assets/js/loader.js?v=20251121181842" defer></script>
 </body>
 </html>
