--- a/pages/_template.html
+++ b/pages/_template.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title><!-- Replace with Page Title --></title>
 
-  <link rel="stylesheet" href="/assets/css/variables.css" />
-  <link rel="stylesheet" href="/assets/css/main.css" />
+  <link rel="stylesheet" href="/assets/css/variables.css?v=20251121181842" />
+  <link rel="stylesheet" href="/assets/css/main.css?v=20251121181842" />
   <!-- Add page-specific CSS only when needed (e.g., podcast.css) -->
 </head>
 <body id="top">
@@ -27,14 +27,8 @@
 
   <div id="footer"></div>
 
-  <script src="/assets/js/quotes.js" defer></script>
-  <script src="/assets/js/loader.js" defer></script>
-  <script defer>
-    document.addEventListener('DOMContentLoaded', () => {
-      loadPartial('#header', '/site/partials/header.html');
-      loadPartial('#footer', '/site/partials/footer.html');
-    });
-  </script>
+  <script src="/assets/js/quotes.js?v=20251121181842" defer></script>
+  <script src="/assets/js/loader.js?v=20251121181842" defer></script>
   <!-- Page-specific JS below if needed -->
 </body>
 </html>
