--- a/pages/coco/index.html
+++ b/pages/coco/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CoCo — Chief Wellness Officer</title>
   <meta name="description" content="Meet CoCo, the chocolate lab who brightens calls and keeps L8 moving.">
-  <link rel="stylesheet" href="/assets/css/variables.css" />
-  <link rel="stylesheet" href="/assets/css/main.css" />
+  <link rel="stylesheet" href="/assets/css/variables.css?v=20251121181842" />
+  <link rel="stylesheet" href="/assets/css/main.css?v=20251121181842" />
 </head>
 <body id="top">
   <div id="header"></div>
@@ -29,7 +29,7 @@
       <div class="container bio-block">
         <figure class="profile-photo">
           <img
-            src="/assets/img/coco/coco-1.jpg"
+            src="/assets/img/coco/coco-1.jpg?v=20251121181842"
             alt="CoCo the chocolate lab sitting attentively during a video call."
           />
           <figcaption>On duty during client sessions.</figcaption>
@@ -44,7 +44,7 @@
 
           <figure>
             <img
-              src="/assets/img/coco/coco-2.jpg"
+              src="/assets/img/coco/coco-2.jpg?v=20251121181842"
               alt="CoCo relaxing between meetings."
             />
             <figcaption>Recovery between sprints.</figcaption>
@@ -76,7 +76,7 @@
 
   <div id="footer"></div>
 
-  <script src="/assets/js/loader.js" defer></script>
-  <script src="/assets/js/quotes.js" defer></script>
+  <script src="/assets/js/loader.js?v=20251121181842" defer></script>
+  <script src="/assets/js/quotes.js?v=20251121181842" defer></script>
 </body>
 </html>
