--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact — The Butterfly Layer</title>
   <meta name="description" content="Contact L8 — The Butterfly Layer. Advisory, speaking, and collaborations at the human layer of the network.">
-  <link rel="stylesheet" href="/assets/css/variables.css" />
-  <link rel="stylesheet" href="/assets/css/main.css" />
+  <link rel="stylesheet" href="/assets/css/variables.css?v=20251121181842" />
+  <link rel="stylesheet" href="/assets/css/main.css?v=20251121181842" />
 </head>
 <body id="top">
   <div id="header"></div>
@@ -32,7 +32,7 @@
 
   <div id="footer"></div>
 
-  <script src="/assets/js/loader.js" defer></script>
-  <script src="/assets/js/quotes.js" defer></script>
+  <script src="/assets/js/loader.js?v=20251121181842" defer></script>
+  <script src="/assets/js/quotes.js?v=20251121181842" defer></script>
 </body>
 </html>
