--- a/pages/podcast/index.html
+++ b/pages/podcast/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Podcast — L8 The Butterfly Layer</title>
 
-  <link rel="stylesheet" href="/assets/css/variables.css" />
-  <link rel="stylesheet" href="/assets/css/main.css" />
-  <link rel="stylesheet" href="/assets/css/podcast.css" />
+  <link rel="stylesheet" href="/assets/css/variables.css?v=20251121181842" />
+  <link rel="stylesheet" href="/assets/css/main.css?v=20251121181842" />
+  <link rel="stylesheet" href="/assets/css/podcast.css?v=20251121181842" />
 </head>
 <body id="top">
   <div id="header"></div>
@@ -27,15 +27,8 @@
 
   <div id="footer"></div>
 
-  <script src="/assets/js/quotes.js" defer></script>
-  <script src="/assets/js/loader.js" defer></script>
-  <script src="/assets/js/podcast.js" defer></script>
-  <script defer>
-    document.addEventListener('DOMContentLoaded', () => {
-      loadPartial('#header', '/partials/header.html');
-      loadPartial('#footer', '/partials/footer.html');
-      // podcast.js should populate #episodes from /site/podcast/episodes.json
-    });
-  </script>
+  <script src="/assets/js/quotes.js?v=20251121181842" defer></script>
+  <script src="/assets/js/loader.js?v=20251121181842" defer></script>
+  <script src="/assets/js/podcast.js?v=20251121181842" defer></script>
 </body>
 </html>
