Creating publications and toolkit pages.

--- a/pages/toolkit/index.html
+++ b/pages/toolkit/index.html
@@ -1,10 +1,10 @@
-<!-- /site/pages/press/index.html -->
+<!-- /site/pages/toolkit/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Press — L8 The Butterfly Layer</title>
+  <title>Toolkit — L8 The Butterfly Layer</title>
 
   <link rel="stylesheet" href="/assets/css/variables.css?v=20251121184649" />
   <link rel="stylesheet" href="/assets/css/main.css?v=20251121184649" />
@@ -14,22 +14,10 @@
 
   <main id="main" role="main">
     <header class="page-header container">
-      <h1>Press</h1>
-      <p class="page-intro">Mentions, features, and appearances.</p>
+      <h1>Toolkit</h1>
+      <p class="page-intro">Useful tools and resources for building elegant systems.</p>
     </header>
 
-    <section class="container flow">
-      <ul class="press-list">
-        <!-- Add press items as list entries; keep minimal structure -->
-        <!-- Example:
-        <li>
-          <h3><a href="https://example.com">Publication Title</a></h3>
-          <p class="meta">Month Day, Year</p>
-          <p>Short description of the feature.</p>
-        </li>
-        -->
-      </ul>
-    </section>
   </main>
 
   <div id="footer"></div>
